--- a/pagina.html
+++ b/pagina.html
@@ -16,19 +16,63 @@
     <h4>contenido</h4>
     -->
     <!--etiquetas de titulo-->
-    <h1>Beinvenidos a censa</h1>
-    <h2>Estudiantes de programacion</h2>
-    <h3>salon 604</h3>
-    <h4>el dia domingo hay clase</h4>
-    <h5>el dia es azul</h5>
+        <h1>Beinvenidos a censa</h1>
+        <h2>Estudiantes de programacion</h2>
+        <h3>salon 604</h3>
     <br><br>
-    <p><b>el sol</b></p>
+        <h4>link o hipervinculos</h4>
+        <a href="http://www.youtube.com" target="_blank" rel="noopener noreferrer">Ir a pagina</a>
     <br><br><br>
-    <div class="selector1">
+        <a href="http://www.censa.edu.co" target="_blank" rel="noopener noreferrer">Ir a pagina educativa</a>
+        <!--listas ordenadas y desordenadas-->
+        <br><br><br><br>
+        <ol> <!--etiqueta de lista ordenada-->
+            <li>Gato</li>
+            <li>Perro</li>
+            <li>Maria</li>
+            <li>Señor</li>
+        </ol>
+        <br><br><br>
+        <ul>
+            <li>Juan</li>
+            <li>Matematicas</li>
+            <li>Ciencia</li>
+            <li>Español</li>
+        </ul>
+    <br><br><br>
+        <table>
+            <tr> <!--Encabezado-->
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Edad</th>
+            </tr>
+            <tr> <!--detalles-->
+                <td>Juan</td>
+                <td>Pereira</td>
+                <td>20</td>
+            </tr>
+        </table>
+    <br><br><br>
+        <!--formularios-->
+        <form action="">
+            <input type="text" name="" id="" placeholder="Ingrese su nombre">
+            <input type="email" name="" id="" placeholder="Ingrese su email">
+            <input type="number" name="" id="" placeholder="Ingrese su edad">
+            <input type="tel" name="" id="" placeholder="Ingrese su tel">
+            <input type="password" name="" id="" placeholder="Ingrese su password">
+            <input type="submit" value="Ingresar">
+        </form>
+    <br><br>
+        <h4>el dia domingo hay clase</h4>
+        <h5>el dia es azul</h5>
+    <br><br>
+        <p><b>el sol</b></p>
+    <br><br><br>
+        <div class="selector1">
         <p>domingo</p>
     </div>
     <br><br>
-    <div id="selector2">
+        <div id="selector2">
         <p>las nubes</p>
     </div>
     <br><br><br><br><br>
